--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <script type="module">
-import custom from '../custom.js';
+import custom from '../src/custom.js';
 const x = custom();
 
 class XFoo extends HTMLElement { connectedCallback() { console.log('live') } }
