--- a/test/fragment.html
+++ b/test/fragment.html
@@ -8,7 +8,7 @@
     src="https://esm.run/data-imports"
   ></script>
   <script type="module">
-    import Fragment from '../src/fragment.js';
+    import Fragment from '../src/classes/fragment.js';
 
     const ok = document.createTextNode('ok');
     const source = document.createDocumentFragment();
